# Openconnect-RS

./: .gitignore  .gitmodules  Cargo.toml  README.md  artifact.sh  install-cli.sh
.cargo/: config.toml
.github/workflows/: linux-x64.yml  mac-aarch64.yml  mac-x64.yml  mingw64.yml  prebuilt-openconnect-linux-x64.yml  prebuilt-openconnect-mac-aarch64.yml  prebuilt-openconnect-mac-arm64.yml  prebuilt-openconnect-mac-x64.yml  prebuilt-openconnect-msys.yml
crates/openconnect-build/: Cargo.toml
crates/openconnect-build/src/: lib.rs
crates/openconnect-cli/: Cargo.toml
crates/openconnect-cli/src/: cli.rs  config.rs  daemon.rs  main.rs  sock.rs  state.rs
crates/openconnect-cli/src/client/: config.rs  mod.rs  state.rs
crates/openconnect-cli/src/server/: mod.rs
crates/openconnect-core/: Cargo.toml  README.md
crates/openconnect-core/examples/: password_server.rs
crates/openconnect-core/src/: cert.rs  command.rs  config.rs  elevator.rs  errno.rs  events.rs  form.rs  ip_info.rs  lib.rs  log.rs  main.rs  protocols.rs  result.rs  stats.rs  storage.rs  token.rs
crates/openconnect-gui/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
crates/openconnect-gui/src/: About.tsx  App.tsx  ServerEditor.tsx  ServerEditorModal.tsx  ServerSelector.tsx  Titlebar.tsx  main.tsx  state.ts
crates/openconnect-gui/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  vpnc-script-win.js
crates/openconnect-gui/src-tauri/src/: app_state.rs  command.rs  main.rs  oidc.rs  state.rs  system_tray.rs
crates/openconnect-gui/src/assets/: connected-animate.json
crates/openconnect-gui/src/lib/: error.tsx  toast.tsx
crates/openconnect-oidc/: Cargo.toml  LICENSE-MIT
crates/openconnect-oidc/src/: lib.rs  oidc_device.rs  oidc_token.rs
crates/openconnect-sys/: .gitignore  Cargo.toml  MANUAL_BUILD.md  README.md  build.rs  wrapper.h
crates/openconnect-sys/c-src/: helper.c  helper.h
crates/openconnect-sys/scripts/: nix.sh
crates/openconnect-sys/src/: bindings_aarch64_macos.rs  bindings_x86_64_linux_gnu.rs  bindings_x86_64_macos.rs  bindings_x86_64_windows_gnu.rs  lib.rs
doc/server-related/: oidc.md
test/: package.json  pnpm-lock.yaml
test/src/: index.ts
