[workspace]
resolver = "2"
members = [
    "crates/openconnect-build",
    "crates/openconnect-sys",
    "crates/openconnect-core",
    "crates/openconnect-gui/src-tauri",
    "crates/openconnect-cli",
]

[workspace.dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.12.2", features = [
    "multipart",
    "blocking",
    "cookies",
] }
base64 = "0.22.0"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["json", "serde"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = "0.3.30"
anyhow = "1.0.81"
dotenvy = "0.15.7"
thiserror = "1.0.58"
windows-sys = "0.52.0"
windows = { version = "0.54.0", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
security-framework = "2.9.2"
sudo = "0.6.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
home = "0.5.9"
libc = "0.2.153"
dunce = "1.0.4"
chrono = "0.4.35"
openidconnect = { version = "3.5.0", features = ["reqwest"] }
url = "2.5.0"
sha2 = "0.10.8"
rand = "0.8.5"
hex = "0.4.3"
machine-uid = "0.5.1"
chacha20poly1305 = "0.10.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"