[package]
name = "openconnect-cli"
description = "A CLI client to connect to VPN using OpenConnect"
version = "0.1.1"
edition = "2021"

[dependencies]
base64 = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tokio-serde = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
openconnect-core = { path = "../openconnect-core", version = "0.1.1" }
sudo = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
home = { workspace = true }
comfy-table = "7.1.1"
dialoguer = "0.11.0"