[package]
name = "openconnect-cli"
description = "A CLI client to connect to VPN using OpenConnect"
version = "0.1.3"
edition = "2021"
homepage = "https://github.com/hlhr202/Openconnect-RS"
authors = ["hlhr202"]
license = "LGPL-2.1"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tokio = { workspace = true }
tokio-serde = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
openconnect-oidc = { path = "../openconnect-oidc", version = "0.1.3" }
openconnect-core = { path = "../openconnect-core", version = "0.1.3" }
sudo = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
home = { workspace = true }
comfy-table = "7.1.1"
dialoguer = "0.11.0"