[package]
name = "openconnect-core"
version = "0.1.0"
edition = "2021"
description = "A library for interacting with OpenConnect VPN"
license = "LGPL-2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
ctrlc = "3.4.4"
signal-hook = "0.3.17"
dotenvy = { workspace = true }
libc = { workspace = true }
openconnect-sys = { path = "../openconnect-sys", version = "0.1.1"}
reqwest = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true }
home = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
machine-uid = { workspace = true }
chacha20poly1305 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }
windows = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { workspace = true }

[[example]]
name = "password_server"