[package]
name = "openconnect-sys"
version = "0.1.1"
edition = "2021"
build = "build/main.rs"
description = "Rust bindings for OpenConnect"
license = "LGPL-2.1"
repository = "https://github.com/hlhr202/Openconnect-RS"
homepage = "https://github.com/hlhr202/Openconnect-RS"
authors = ["hlhr202"]
keywords = ["openconnect", "vpn", "networking", "security"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
openssl-sys = "0.9.101"

[lib]
crate-type = ["lib"]

[build-dependencies]
bindgen = "0.69.4"
cc = "1.0.90"
pkg-config = "0.3.30"
home = { workspace = true }
reqwest = { workspace = true }
zip = "0.6.6"
# openconnect-build = { path = "../openconnect-build", version = "0.1.0" }
