[package]
name = "openconnect-sys"
version = "0.1.4"
edition = "2021"
build = "build/main.rs"
description = "Rust bindings for OpenConnect"
license = "LGPL-2.1"
repository = "https://github.com/hlhr202/Openconnect-RS/tree/main/crates/openconnect-sys"
homepage = "https://github.com/hlhr202/Openconnect-RS"
authors = ["hlhr202"]
keywords = ["openconnect", "vpn", "networking", "security"]
documentation = "https://docs.rs/openconnect-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
openssl-sys = "0.9.101"

[lib]
crate-type = ["lib"]

[build-dependencies]
bindgen = "0.69.4"
cc = "1.0.90"
pkg-config = "0.3.30"
home = { workspace = true }
reqwest = { workspace = true }
zip = "0.6.6"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin", "x86_64-pc-windows-gnu"]