[package]
name = "openconnect-gui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
anyhow = { workspace = true }
tauri = { version = "1.6.1", features = [
    "macos-private-api",
    "window-show",
    "window-unminimize",
    "window-minimize",
    "window-maximize",
    "window-start-dragging",
    "window-unmaximize",
    "window-close",
    "window-hide",
    "shell-open",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
openconnect-core = { path = "../../openconnect-core" }
lazy_static = { workspace = true }
thiserror = { workspace = true }
sudo = "0.6.0"
reqwest = { workspace = true }
tokio = { workspace = true }
rand = "0.8.5"
openidconnect = { version = "3.5.0", features = ["reqwest"] }
url = "2.5.0"
open = "5.1.2"
hyper = "1.2.0"
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1.1"
dotenvy = { workspace = true }
bytes = "1.5.0"

[patch.crates-io]
winres = { git = "https://github.com/Nilstrieb/winres", branch = "linking-flags" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }
