[package]
name = "openconnect-gui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
anyhow = { workspace = true }
tauri = { version = "1.6.1", features = [ "system-tray",
    "macos-private-api",
    "window-show",
    "window-unminimize",
    "window-minimize",
    "window-maximize",
    "window-start-dragging",
    "window-unmaximize",
    "window-close",
    "window-hide",
    "shell-open",
    "icon-png"
] }
dotenvy = { workspace = true }
lazy_static = { workspace = true }
open = "5.1.2"
openconnect-core = { path = "../../openconnect-core" }
openidconnect = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sudo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
libc = { workspace = true }
url = { workspace = true }
window-shadows = "0.2.2"

[patch.crates-io]
winres = { git = "https://github.com/Nilstrieb/winres", branch = "linking-flags" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }
dunce = { workspace = true }
